--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /downloads/
 /.venv/
 config.yml
+src/__pycache__/
+src/image/__pycache__/
+src/threads/__pycache__/
+website/__pycache__/
+website/routes/__pycache__/
+src/__pycache__/
+src/image/__pycache__/
+src/threads/__pycache__/
+website/__pycache__/
+website/routes/__pycache__/
